Fixed the overflow problem in responsive

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 @layer base {
   body {
     background-image: url("/img/bg.webp");
-    @apply font-main bg-cover bg-fixed;
+    @apply font-main bg-cover bg-fixed bg-center overflow-hidden;
   }
 
   a {
